# ltr_control_software

./: .gitignore  README.md  adc_test.py  config.json  control_software.service  dhcpcd.conf  driver_hardware.py  driver_interface.py  fan_test.py  fanboard_hardware.py  fanboard_interface.py  install.sh  install_service.sh  ltr_start.sh  main.py  modbus_server.py  output_control.py  qtest.py  raspi_hardware.py  raspi_interface.py  sensor_aggregator.py  sensor_monitor.py  set_fan_pwm.py  setup.cfg  simpletest.py  system_manager.py  test.bat  test.py  thermo_test.py  uninstall.sh  uninstall_service.sh
archive/: adc_test.py  config.json  config_v4.json  driver_interface.py  fan_control.py  get_inputs.py  ltr_controller.service  ltr_controller_old.py  main.py  mcp9600_test.py  power_test.py  raspi_hardware.py  sensor_monitor.py  simple_test.py  system_manager.py  test.txt  test2.txt  test3.txt  thermo_max31856_test.py  thermo_test.py  ttv_control.py  uninstall_service.sh
config/: __init__.py  adc_config.json  adc_test.json  chip_select_config.json  driver_config.json  fan_speed_device_config.json  i2c_config.json  modbus_config.json  sensor_manager.json  spi_config.json  system_config.json  thermal_manager.json  thermal_manager_validation.json  thermocouple_config - Copy.json  thermocouple_config.json
devices/: adc_manager.py  bus_manager.py  chip_select.py  driver_manager.py  emulation_helpers.py  thermo_manager.py
fan_controller_board/: fan_controller_board.ino
fan_controller_boardv1.2/: fan_controller_boardv1.2.ino
system_control/: __init__.py  modbus_server.py  (+4 more)
(+60 files in other folders)
