# -*- coding: utf-8 -*-
[metadata]
name = ltr_control_software
version = 2.0.0
author = Ricardo Chavira
author_email = rick.chavira@gmail.com
description = LTR Interface Control Software
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Raspberry Pi LTR OCP
project_urls =
	GitHub=https://github.com/rchavira/ltr_control_software
license = MIT
license_files = LICENSE.txt
classifiers =
	Development Status :: 4 - Beta
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Topic :: Software Development
	Topic :: Software Development :: Libraries
	Topic :: System :: Hardware

[options]
python_requires = >= 2.7
install_requires =
	i2cdevice >= 0.0.6

[flake8]
exclude =
	.tox,
	.eggs,
	.git,
	__pycache__,
	build,
	dist
ignore =
	E501

[ltr_control_software]
py2deps =
py3deps = adafruit-circuitpython-pca9685, adafruit-circuitpython-max31855, adafruit-circuitpython-max31856, adafruit-circuitpython-busdevice, mcp9600, pymodbus[twisted], numpy
configtxt =
commands =